syntax = "proto3";

import "Command.proto";
import "FetchRequest.proto";
import "GrpcResponse.proto";
import "NetworkUser.proto";

option java_multiple_files = true;
option java_package = "io.grpc.message";
option java_outer_classname = "MessageDataProto";
option objc_class_prefix = "HLW";
 
package Nanomite.Services.Network.Grpc;

service GrpcServer {

    /// <summary>
    /// Used to open a bidirectional stream. A stream can either be used to open a permanent contection to the grpc host
	/// to receive event the client subscribes to or to open one or multiple streams to send big data content.
    /// </summary>    
    rpc OpenStream(stream Command) returns (stream Command) {} 

    /// <summary>
    /// Used to send specific commands (actions) via rpc call to the host. 
 	/// The rpc call is always be responded with at least an OK.
    /// </summary>  
    rpc Execute(Command) returns (GrpcResponse){}
 
	/// <summary>
    /// Used to request specific data from the hosts database. 
	/// The response content is always been presented insides the GrpcReponse Any proto list.
    /// </summary>  
    rpc Fetch(FetchRequest) returns (GrpcResponse){}
}